Modify language in example notebook

--- a/notebooks/end_to_end_example.ipynb
+++ b/notebooks/end_to_end_example.ipynb
@@ -269,7 +269,7 @@
     "4. How did they feel about that aspect (focused sentiment analysis)\n",
     "5. How many comments were there about different aspects? (multilabel classification)\n",
     "\n",
-    "If you're interested in this sort of thing, have a look at the paper called [A Large Language Model Approach to Educational Survey Feedback Analysis](https://arxiv.org/pdf/2309.17447.pdf) (shameless self plug). "
+    "If you're interested in this sort of thing, have a look at the paper called [A Large Language Model Approach to Educational Survey Feedback Analysis](https://arxiv.org/pdf/2309.17447.pdf). "
    ]
   },
   {
