Re-run extraction notebook with updated gpt-4o model as default

--- a/notebooks/extraction_example.ipynb
+++ b/notebooks/extraction_example.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,15 +220,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                                                                                                                                                                best_parts   \n",
-       "0                                                                                                                                                                        I valued the practical clinical aspects related to immune-related disorders and their management.  \\\n",
+       "                                                                                                                                                                                                                                                                best_parts  \\\n",
+       "0                                                                                                                                                                        I valued the practical clinical aspects related to immune-related disorders and their management.   \n",
        "1                                                                                                                                                                                                                      The flexibility to learn at a self-determined speed   \n",
        "2                                                                                                                                                              The educational content was extremely enriching and stimulating! The section on oncology was the highlight.   \n",
        "3                                                                                                                                                                                                                            Professional growth within the medical sector   \n",
        "4  The highlights of the class included the practical demonstration clips that made the complex biological principles more understandable by connecting them to daily well-being and actions. This connection was incredibly beneficial as I navigated the course content.   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                                                                                                                                                                                                    enhanced_learning   \n",
-       "0                                                                                                                                                                                                                                                                                                                                                                                                     The illustrative visuals and straightforward explanatory clips.  \\\n",
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                    enhanced_learning  \\\n",
+       "0                                                                                                                                                                                                                                                                                                                                                                                                     The illustrative visuals and straightforward explanatory clips.   \n",
        "1                                                                                                                                                                                                                                                                                                                                                                                                                       The opportunity to review the lecture content   \n",
        "2                                                                                                                                                                                                                                                                                                                                                                                                                                     the self-assessment activities.   \n",
        "3                                                                                                                                                                                                                                                                          The practical integration workshops were highly beneficial, they significantly contributed to a deeper comprehension of the theories and their implementation in a healthcare environment.   \n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
       "sleeping for 30 seconds between batches\n",
       "starting 0 to 100\n",
       "completed 0 to 100\n",
-      "elapsed time: 5.02046012878418\n",
+      "elapsed time: 1.13742995262146\n",
       "Student comment: \"Extend the duration of the concept videos for the more\n",
       "challenging topics, as they require a deeper dive to fully grasp the\n",
       "intricacies involved. Additionally, consider introducing an additional\n",
@@ -353,11 +353,11 @@
       "{'excerpts': ['Extend the duration of the concept videos for the more '\n",
       "              'challenging topics, as they require a deeper dive to fully '\n",
       "              'grasp the intricacies involved.',\n",
-      "              'Additionally, consider introducing an additional educator to '\n",
-      "              'the mix. The dynamic of having multiple voices in another '\n",
-      "              'subject area is quite engaging, and it would be beneficial to '\n",
-      "              'replicate that experience in this subject to prevent monotony '\n",
-      "              'from setting in with just one instructor.']}\n"
+      "              'Consider introducing an additional educator to the mix. The '\n",
+      "              'dynamic of having multiple voices in another subject area is '\n",
+      "              'quite engaging, and it would be beneficial to replicate that '\n",
+      "              'experience in this subject to prevent monotony from setting in '\n",
+      "              'with just one instructor.']}\n"
      ]
     }
    ],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
       "sleeping for 30 seconds between batches\n",
       "starting 0 to 100\n",
       "completed 0 to 100\n",
-      "elapsed time: 5.164654016494751\n",
+      "elapsed time: 1.378046989440918\n",
       "Student comment: \"Consider reducing the duration of certain videos. A\n",
       "few appeared to be slightly prolonged.\"\n",
       "{'excerpts': ['Consider reducing the duration of certain videos. A few '\n",
@@ -432,11 +432,11 @@
       "{'excerpts': ['Extend the duration of the concept videos for the more '\n",
       "              'challenging topics, as they require a deeper dive to fully '\n",
       "              'grasp the intricacies involved.',\n",
-      "              'Additionally, consider introducing an additional educator to '\n",
-      "              'the mix. The dynamic of having multiple voices in another '\n",
-      "              'subject area is quite engaging, and it would be beneficial to '\n",
-      "              'replicate that experience in this subject to prevent monotony '\n",
-      "              'from setting in with just one instructor.']}\n",
+      "              'consider introducing an additional educator to the mix. The '\n",
+      "              'dynamic of having multiple voices in another subject area is '\n",
+      "              'quite engaging, and it would be beneficial to replicate that '\n",
+      "              'experience in this subject to prevent monotony from setting in '\n",
+      "              'with just one instructor.']}\n",
       "\n",
       "\n",
       "Student comment: \"Educationally, I found the course to be of exceptional\n",
@@ -449,6 +449,8 @@
       "would be a valuable enhancement.\"\n",
       "{'excerpts': ['It would be beneficial to include more comprehensive '\n",
       "              'discussions on a wider variety of treatments for cancer.',\n",
+      "              'Topics like circulating tumor DNA and the progression of tumors '\n",
+      "              'were addressed somewhat superficially.',\n",
       "              'Expanding on the practical consequences and real-life instances '\n",
       "              'of therapeutic approaches and patient scenarios would be a '\n",
       "              'valuable enhancement.']}\n",
@@ -510,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +523,7 @@
       "sleeping for 30 seconds between batches\n",
       "starting 0 to 100\n",
       "completed 0 to 100\n",
-      "elapsed time: 8.213883876800537\n",
+      "elapsed time: 1.2580978870391846\n",
       "Student comment: \"Consider reducing the duration of certain videos. A\n",
       "few appeared to be slightly prolonged.\"\n",
       "{'excerpts': ['Consider reducing the duration of certain videos. A few '\n",
@@ -545,7 +547,7 @@
       "matter. These projects wouldn't need to influence exam scores.\"\n",
       "{'excerpts': ['Incorporating a few advanced projects as optional tasks could '\n",
       "              'benefit learners who wish to delve deeper into the subject '\n",
-      "              'matter.']}\n",
+      "              \"matter. These projects wouldn't need to influence exam scores.\"]}\n",
       "\n",
       "\n",
       "Student comment: \"Extend the duration of the concept videos for the more\n",
@@ -575,6 +577,8 @@
       "would be a valuable enhancement.\"\n",
       "{'excerpts': ['It would be beneficial to include more comprehensive '\n",
       "              'discussions on a wider variety of treatments for cancer.',\n",
+      "              'Topics like circulating tumor DNA and the progression of tumors '\n",
+      "              'were addressed somewhat superficially.',\n",
       "              'Expanding on the practical consequences and real-life instances '\n",
       "              'of therapeutic approaches and patient scenarios would be a '\n",
       "              'valuable enhancement.']}\n",
@@ -637,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +652,7 @@
       "sleeping for 30 seconds between batches\n",
       "starting 0 to 100\n",
       "completed 0 to 100\n",
-      "elapsed time: 5.585621118545532\n",
+      "elapsed time: 0.8593671321868896\n",
       "Student comment: \"Consider reducing the duration of certain videos. A\n",
       "few appeared to be slightly prolonged.\"\n",
       "{'excerpts': ['Consider reducing the duration of certain videos. A few '\n",
@@ -682,12 +686,7 @@
       "just one instructor.\"\n",
       "{'excerpts': ['Extend the duration of the concept videos for the more '\n",
       "              'challenging topics, as they require a deeper dive to fully '\n",
-      "              'grasp the intricacies involved.',\n",
-      "              'consider introducing an additional educator to the mix. The '\n",
-      "              'dynamic of having multiple voices in another subject area is '\n",
-      "              'quite engaging, and it would be beneficial to replicate that '\n",
-      "              'experience in this subject to prevent monotony from setting in '\n",
-      "              'with just one instructor.']}\n",
+      "              'grasp the intricacies involved.']}\n",
       "\n",
       "\n",
       "Student comment: \"Educationally, I found the course to be of exceptional\n",
@@ -762,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
