Update summarization notebook to re-run with newer model

--- a/notebooks/summarization_example.ipynb
+++ b/notebooks/summarization_example.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,8 @@
     "from IPython.display import Markdown, display\n",
     "from pathlib import Path\n",
     "from dotenv import load_dotenv, find_dotenv\n",
-    "from survey_analysis.summarization import summarize_comments"
+    "from survey_analysis.summarization import summarize_comments\n",
+    "import textwrap"
    ]
   },
   {
@@ -207,15 +208,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                                                                                                                                                                best_parts   \n",
-       "0                                                                                                                                                                        I valued the practical clinical aspects related to immune-related disorders and their management.  \\\n",
+       "                                                                                                                                                                                                                                                                best_parts  \\\n",
+       "0                                                                                                                                                                        I valued the practical clinical aspects related to immune-related disorders and their management.   \n",
        "1                                                                                                                                                                                                                      The flexibility to learn at a self-determined speed   \n",
        "2                                                                                                                                                              The educational content was extremely enriching and stimulating! The section on oncology was the highlight.   \n",
        "3                                                                                                                                                                                                                            Professional growth within the medical sector   \n",
        "4  The highlights of the class included the practical demonstration clips that made the complex biological principles more understandable by connecting them to daily well-being and actions. This connection was incredibly beneficial as I navigated the course content.   \n",
        "\n",
-       "                                                                                                                                                                                                                                                                                                                                                                                                                                                    enhanced_learning   \n",
-       "0                                                                                                                                                                                                                                                                                                                                                                                                     The illustrative visuals and straightforward explanatory clips.  \\\n",
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                    enhanced_learning  \\\n",
+       "0                                                                                                                                                                                                                                                                                                                                                                                                     The illustrative visuals and straightforward explanatory clips.   \n",
        "1                                                                                                                                                                                                                                                                                                                                                                                                                       The opportunity to review the lecture content   \n",
        "2                                                                                                                                                                                                                                                                                                                                                                                                                                     the self-assessment activities.   \n",
        "3                                                                                                                                                                                                                                                                          The practical integration workshops were highly beneficial, they significantly contributed to a deeper comprehension of the theories and their implementation in a healthcare environment.   \n",
@@ -247,51 +248,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "The feedback highlights several areas for improvement across different aspects of the course:\n",
-       "\n",
-       "1. **Pacing and Content Delivery**: There's a consensus on adjusting the pace of lectures and videos. Some students find certain videos too long or too fast-paced, making it hard to follow along. Suggestions include slowing down the pace of some lectures, shortening overly lengthy videos, and providing more comprehensive notes or outlines.\n",
-       "\n",
-       "2. **Depth and Variety of Content**: Students expressed a desire for more in-depth exploration of topics, including advanced projects, more case studies, and expanding on subjects like cancer treatments, immunotherapy, and practical clinical demonstrations. Incorporating more advanced and varied content could enrich the learning experience.\n",
-       "\n",
-       "3. **Engagement and Interactivity**: Enhancing the course with more interactive elements, such as simulations, practical exercises, and engaging activities, was frequently mentioned. Suggestions also include incorporating more visual aids and multimedia presentations to better illustrate concepts.\n",
-       "\n",
-       "4. **Assessment and Feedback Mechanisms**: There's feedback on aligning assessments more closely with course content, increasing the number of tries for final assessments, and improving the clarity and relevance of quiz questions. Incorporating a mid-term assessment and providing more mock tests were also suggested.\n",
-       "\n",
-       "5. **Accessibility and Clarity**: Improving the clarity of video lectures, ensuring consistency in language across presentations, and making subtitles selectable for copying were mentioned. Adding subtitles in other languages could also help non-English speakers.\n",
-       "\n",
-       "6. **Resource Availability**: Students would appreciate more comprehensive learning materials, including downloadable PDFs, additional study resources, and ongoing access to course content for future reference.\n",
-       "\n",
-       "7. **Curriculum Expansion**: Expanding the curriculum to cover more topics and incorporating additional content on current and innovative treatments were suggested to broaden the learning experience.\n",
-       "\n",
-       "Overall, while many students found the course satisfactory or even outstanding, these areas of improvement could enhance the educational quality and student engagement."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "improve_course_question = \"What could be improved about the course?\"\n",
     "comments = example_survey['improve_course'].tolist()\n",
-    "summarization_result = await summarize_comments(comments=comments, question=improve_course_question)\n",
-    "\n",
-    "display(Markdown((summarization_result.summary)))"
+    "summarization_result = await summarize_comments(comments=comments, question=improve_course_question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The major themes of feedback shared by the students include: 1) Video\n",
+      "Content: Mixed feedback on video duration, with some students suggesting\n",
+      "shorter videos for simpler topics and longer videos for complex topics.\n",
+      "2) Lecture Pace and Clarity: Requests to slow down the pace of lectures\n",
+      "and improve the clarity of speech and handwriting. 3) Practical and\n",
+      "Interactive Elements: Desire for more practical exercises, case studies,\n",
+      "and interactive elements such as simulations and multimedia\n",
+      "presentations. 4) Advanced and Additional Content: Suggestions to\n",
+      "include more advanced projects, additional subjects, and the latest\n",
+      "treatment methods. 5) Assessment and Study Materials: Need for better\n",
+      "alignment of quizzes with course content, more mock tests, clearer and\n",
+      "more straightforward questions, and additional study resources. 6)\n",
+      "Visual Aids and Multimedia: Requests for more visual aids, multimedia\n",
+      "elements, and comprehensive descriptions to enhance understanding. 7)\n",
+      "Consistency and Accessibility: Ensuring consistency in language across\n",
+      "presentations and making subtitles selectable for copying. 8) Course\n",
+      "Duration: Mixed feedback on course duration, with some students wanting\n",
+      "a longer course. 9) Additional Educators: Suggestion to introduce\n",
+      "additional educators to provide a dynamic learning experience. 10) Real-\n",
+      "World Applications: Desire for more discussions on practical\n",
+      "consequences, real-life instances, and challenges in implementing\n",
+      "innovations.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_wrap(summarization_result.summary)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When I ran this for the example, the model happened to format the output in Markdown, so that's the way I'm displaying it above. This summary gives a pretty reasonable sense at a high level of what students said for this survey question. But if you're looking for more structured output (something you could use as categories in a bar graph, for example), then check out the example notebook on theme derivation, or the (much longer) notebook with the end-to-end example."
+    "This summary gives a pretty reasonable sense at a high level of what students said for this survey question. But if you're looking for more structured output (something you could use as categories in a bar graph, for example), then check out the example notebook on theme derivation, or the (much longer) notebook with the end-to-end example."
    ]
   }
  ],
@@ -311,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
